# hass-codex-conversation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements_dev.txt  requirements_test.txt
.devcontainer/: Dockerfile  configuration.yaml  devcontainer.json  start.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  pr.yml  release.yml  tests.yml  validate.yml
config/: configuration.yaml
custom_components/codex_conversation/: __init__.py  ai_task.py  config_flow.py  const.py  conversation.py  manifest.json  oauth.py  strings.json  transform.py
custom_components/codex_conversation/codex_api/: __init__.py  client.py  errors.py  models.py  requests.py  sse.py
custom_components/codex_conversation/codex_api/auth/: __init__.py  base.py  device_flow.py  jwt.py  token.py
custom_components/codex_conversation/translations/: en.json  it.json
script/: check  clean  develop  hassfest  help  lint  lint-check  test
script/.lib/: output.sh
script/setup/: bootstrap  setup
scripts/: sync_version.py
tests/: conftest.py  test_ai_task.py  test_conversation.py  test_init.py  test_transform.py
