[project]
name = "hass-codex-conversation"
version = "0.1.0"
description = "Home Assistant custom integration for OpenAI Codex"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = []   # runtime deps are managed by Home Assistant itself

[dependency-groups]
dev = [
    "homeassistant==2026.1.0",
    "aiodiscover==1.6.0",
    "pre-commit>=3.3.3",
    "ruff>=0.9.0",
]
test = [
    { include-group = "dev" },
    "pytest-homeassistant-custom-component==0.13.305",
    "pytest-asyncio>=0.23.4",
    "async-timeout>=4.0.2",
]

# ── Ruff (replaces flake8 + isort) ────────────────────────────────────────────

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.codex_conversation"]
combine-as-imports = true

# ── Semantic Release ───────────────────────────────────────────────────────────

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
build_command = "python scripts/sync_version.py"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = []
upload_to_vcs_release = false

# ── Pytest ─────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
addopts = "-qq --cov=custom_components.codex_conversation"
console_output_style = "count"
asyncio_mode = "auto"

# ── Coverage ───────────────────────────────────────────────────────────────────

[tool.coverage.run]
branch = false

[tool.coverage.report]
show_missing = true
